Content Update, Link styling index.html: -Added links for project content to view samples of said content -Links now open in a new tab/blank doc mainPageStyleSheet.css: -Added basic CSS styling for links to make them more visible on the dark background. -Headline buttons now display a pointer cursor to denote they can be clicked

--- a/css/mainPageStyleSheet.css
+++ b/css/mainPageStyleSheet.css
@@ -32,6 +32,7 @@
     color: white;
     overflow:hidden;
     margin-bottom: .2em;
+    cursor:pointer;
 }
 
 .headlinebutton.activebutton{
@@ -83,6 +84,20 @@ body {
     background-color:black;
     color:white;
     overflow-y: scroll;
+    
+}
+
+a{
+    color:springgreen;
+}
+a:visited{
+    color:springgreen;
+}
+a:hover{
+    color:white;
+}
+a:active{
+    color:green;
 }
 
 img{
