--- a/css/indexDesktopStyle.css
+++ b/css/indexDesktopStyle.css
@@ -119,3 +119,15 @@ footer {
         width: 0;
         height: 0;
     }
+
+iframe {
+    width: 560px;
+    height: 315px;
+    display: block;
+    margin: auto;
+}
+
+.twitter-tweet {
+    display: block;
+    margin: auto;
+}
