--- a/css/indexPhoneStyle.css
+++ b/css/indexPhoneStyle.css
@@ -117,3 +117,15 @@ footer {
         width: 0;
         height: 0;
     }
+
+iframe {
+    width: 230px;
+    height: 157px;
+    display: block;
+    margin: auto;
+}
+
+.twitter-tweet {
+    display: block;
+    margin: auto;
+}
