--- a/css/indexTabletStyle.css
+++ b/css/indexTabletStyle.css
@@ -116,3 +116,15 @@ footer {
         width: 0;
         height: 0;
     }
+
+iframe {
+    width: 560px;
+    height: 315px;
+    display: block;
+    margin: auto;
+}
+
+.twitter-tweet {
+    display: block;
+    margin: auto;
+}
