--- a/css/indexDesktopStyle.css
+++ b/css/indexDesktopStyle.css
@@ -51,6 +51,14 @@ footer {
     left: 0;
 }
 
+iframe {
+    width: 560px;
+    height: 315px;
+    display: block;
+    margin: auto;
+    padding-bottom: 1em;
+}
+
 .homeheader {
     font-size: 2vw;
     text-align: center;
@@ -110,6 +118,11 @@ footer {
     border-radius: 20px;
 }
 
+.twitter-tweet {
+    display: block;
+    margin: auto;
+}
+
 .hide {
     width: 0;
     height: 0;
@@ -120,14 +133,6 @@ footer {
         height: 0;
     }
 
-iframe {
-    width: 560px;
-    height: 315px;
-    display: block;
-    margin: auto;
-}
-
-.twitter-tweet {
-    display: block;
-    margin: auto;
+.jsremove {
+    display: none !important;
 }
