--- a/css/indexPhoneStyle.css
+++ b/css/indexPhoneStyle.css
@@ -51,6 +51,14 @@ footer {
     left: 0;
 }
 
+iframe {
+    width: 230px;
+    height: 157px;
+    display: block;
+    margin: auto;
+    padding-bottom: 1em;
+}
+
 .homeheader {
     font-size: 4.5vw;
     text-align: center;
@@ -108,6 +116,11 @@ footer {
     border-radius: 20px;
 }
 
+.twitter-tweet {
+    display: block;
+    margin: auto;
+}
+
 .hide {
     width: 0;
     height: 0;
@@ -118,14 +131,6 @@ footer {
         height: 0;
     }
 
-iframe {
-    width: 230px;
-    height: 157px;
-    display: block;
-    margin: auto;
-}
-
-.twitter-tweet {
-    display: block;
-    margin: auto;
+.jsremove {
+    display: none !important;
 }
