--- a/css/indexPhoneStyle.css
+++ b/css/indexPhoneStyle.css
@@ -33,8 +33,11 @@ summary {
 }
 
 img {
-    max-width: 100%;
+    display:block;
+    max-width: 50%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 footer {
