--- a/css/indexDesktopStyle.css
+++ b/css/indexDesktopStyle.css
@@ -4,7 +4,7 @@ body {
     margin: auto;
     margin-bottom: 5em;
     width: 80%;
-    background-color: black;
+    background-color: rgb(48, 48, 48);
     color: white;
     overflow-y: scroll;
 }
